# kgspin-demo-app

./: .env.example  .gitignore  CLAUDE.md  README.md  config.template.yaml  pyproject.toml
benchmarks/: README.md  __init__.py
benchmarks/arms/a/: README.md
benchmarks/arms/b/: README.md  extract.py
benchmarks/corpus/: .gitignore  fetch.py  manifest.yaml
benchmarks/harness/: metrics.py  run.py  split.py
benchmarks/questions/: .gitignore  financebench-subset.jsonl  multihop-rag.jsonl
benchmarks/reports/: .gitignore
benchmarks/retrieval/: __init__.py  fan_out_from_corpus.py  fan_out_from_graph.py  semantic_composed.py
benchmarks/schemas/: graph-v0.json  results-v0.json
bundles/domains/: financial-v22d.yaml
demos/extraction/: README.md  analysis.py  bundle_resolve.py  demo_compare.py  demo_ticker.py  judge.py  multihop_scenarios.yaml  multihop_scenarios_v5.yaml  pipeline_common.py  prompts.py  run_abc_comparison.py  run_kgen_smell_test.py  run_overnight_batch.py  run_overnight_experiment.py  scenario_b_eval.py  scenarios.py
demos/extraction/cache/: __init__.py  run_log.py
demos/extraction/extraction/: __init__.py  agentic.py  clinical.py  kgen.py  public_api.py
demos/extraction/resources/: JNJ_finance_news_001.txt  JNJ_finance_news_002.txt  JNJ_finance_news_003.txt  JNJ_h_module.json  JNJ_healthcare_news_001.txt  JNJ_healthcare_news_002.txt  JNJ_healthcare_news_003.txt
demos/extraction/routes/: __init__.py  corpus.py  runs.py  (+1 more)
docs/: domain-fetchers.md  intelligence-tab.md  reproducibility-by-triple-hash.md  running-a-demo.md
docs/architecture/: llm-call-sites.md
docs/cross-repo/: 2026-04-26-phase-2-installation-notice-received.md  2026-04-26-phase-a-bundle-schema-additive-notice-received.md
docs/landers/: README.md
docs/roadmap/: ROADMAP.md
docs/sprints/: carve-smoke-test.md
scripts/: build_rag_corpus.py  ensure-admin-running.sh  start-demo.sh
src/kgspin_demo_app/: compare_diff.py  config.py  domain_fetchers.py  llm_backend.py  mcp_server.py  registry_http.py
tests/: conftest.py
tests/api/: test_triple_hash_surfacing.py
tests/extraction/: test_parse_and_chunk_adr038.py  test_trained_compare_smoke.py
tests/fakes/: registry_client.py
tests/integration/: test_alive_routes.py  test_lander_canonicalization.py  test_lander_to_registry.py  test_multihop_endpoint.py  test_phase5a_smoke.py  test_scenario_endpoints.py  test_smoke_e2e.py
tests/manual/: admin_shim.py
tests/playwright/: test_intel_bridging_smoke.py
tests/regression/: test_resolver_swap_subsumption.py
tests/unit/: test_admin_registry_reader.py  test_agentic_dense_rag.py  test_bridge_creation.py  test_build_rag_corpus.py  test_build_vis_data_bridging.py  test_clinical_lander.py  test_clinical_query.py  test_compare_diff.py  test_config.py  test_cross_domain_news.py  test_demo_compare_llm_endpoints.py  test_demo_compare_registry_reads.py  test_dense_rag.py  test_diff_js.py  test_domain_fetchers.py  test_failure_copy.py  test_gold_fixtures.py  test_graph_delta.py  test_graph_rag.py  test_graphsearch_pipeline.py  test_judge.py  test_llm_backend.py  test_marketaux_lander.py  test_merge_provenance.py  test_micrograph.py  test_mock_provider_deprecation.py  test_newsapi_lander.py  test_path_permissions.py  test_pipeline_common_ticker_registry.py  test_pipeline_config_ref.py  test_prompt_and_params.py  test_refresh_kgen_errors.py  test_register_fetchers_cli.py  test_registry_http.py  test_scenario_resolver.py  test_scenarios.py  test_sec_lander.py  test_self_ref_filer_metadata.py  test_topological_health_contract.py  test_yahoo_rss_client.py  (+1 more)
(+166 files in other folders)
